hard-gists/2371c78fc0a5c8935a7a/run.log
=== Docker Run Log for 2371c78fc0a5c8935a7a ===
Started at: Mi 29. Okt 13:03:13 CET 2025

[2025-10-29 13:03:14] START: Running container for 2371c78fc0a5c8935a7a
[2025-10-29 13:03:14] SUCCESS: Container 6da24a2390b4a43e18968238e56989a53f6e01b141c353478bbf8f4abb113240 started for 2371c78fc0a5c8935a7a
=== Container logs for 2371c78fc0a5c8935a7a ===
  File "/snippet.py", line 21
    print u''.join(run.text for run in paragraph.runs).encode('utf-8')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2371c78fc0a5c8935a7a ===
[2025-10-29 13:03:16] INFO: Container 6da24a2390b4a43e18968238e56989a53f6e01b141c353478bbf8f4abb113240 has stopped
